--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Document</title><link rel=stylesheet href=/crat.c6c7b2ba.css><body>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Document</title><link rel=stylesheet href=/crat/crat.c6c7b2ba.css><body>
     <div class=container>
         <h1>Список студентів</h1>
         <button id=get-students-btn>Отримати студентів</button>
@@ -50,6 +50,6 @@
         </div>
     </div>
 
-    <script type=module src=/crat.4210c764.js></script>
+    <script type=module src=/crat/crat.4210c764.js></script>
     
 
